--- a/src/latex/supplement_tex/bibliography.bib
+++ b/src/latex/supplement_tex/bibliography.bib
@@ -1,3 +1,20 @@
+@article{fresard2019,
+        title = {Identification of rare-disease genes using blood transcriptome sequencing and large control cohorts},
+        volume = {25},
+        issn = {1546-170X},
+        doi = {10.1038/s41591-019-0457-8},
+        abstract = {It is estimated that 350 million individuals worldwide suffer from rare diseases, which are predominantly caused by mutation in a single gene1. The current molecular diagnostic rate is estimated at 50\%, with whole-exome sequencing (WES) among the most successful approaches2-5. For patients in whom WES is uninformative, RNA sequencing (RNA-seq) has shown diagnostic utility in specific tissues and diseases6-8. This includes muscle biopsies from patients with undiagnosed rare muscle disorders6,9, and cultured fibroblasts from patients with mitochondrial disorders7. However, for many individuals, biopsies are not performed for clinical care, and tissues are difficult to access. We sought to assess the utility of RNA-seq from blood as a diagnostic tool for rare diseases of different pathophysiologies. We generated whole-blood RNA-seq from 94 individuals with undiagnosed rare diseases spanning 16 diverse disease categories. We developed a robust approach to compare data from these individuals with large sets of RNA-seq data for controls (n = 1,594 unrelated controls and n = 49 family members) and demonstrated the impacts of expression, splicing, gene and variant filtering strategies on disease gene identification. Across our cohort, we observed that RNA-seq yields a 7.5\% diagnostic rate, and an additional 16.7\% with improved candidate gene resolution.},
+        language = {eng},
+        number = {6},
+        journal = {Nature Medicine},
+        author = {Fr{\'{e}}sard, Laure and Smail, Craig and Ferraro, Nicole M. and Teran, Nicole A. and Li, Xin and Smith, Kevin S. and Bonner, Devon and Kernohan, Kristin D. and Marwaha, Shruti and Zappala, Zachary and Balliu, Brunilda and Davis, Joe R. and Liu, Boxiang and Prybol, Cameron J. and Kohler, Jennefer N. and Zastrow, Diane B. and Reuter, Chloe M. and Fisk, Dianna G. and Grove, Megan E. and Davidson, Jean M. and Hartley, Taila and Joshi, Ruchi and Strober, Benjamin J. and Utiramerur, Sowmithri and {Undiagnosed Diseases Network} and {Care4Rare Canada Consortium} and Lind, Lars and Ingelsson, Erik and Battle, Alexis and Bejerano, Gill and Bernstein, Jonathan A. and Ashley, Euan A. and Boycott, Kym M. and Merker, Jason D. and Wheeler, Matthew T. and Montgomery, Stephen B.},
+        year = {2019},
+        pmid = {31160820},
+        pmcid = {PMC6634302},
+        keywords = {Humans, RNA Splicing, Genetic Variation, Models, Genetic, RNA, Sequence Analysis, RNA, Female, Male, Child, Mutation, Acid Ceramidase, Case-Control Studies, Child, Preschool, Cohort Studies, Oxidoreductases Acting on CH-CH Group Donors, Potassium Channels, Rare Diseases, Whole Exome Sequencing},
+        pages = {911--919},
+        file = {Fr{\'{e}}sard et al. - 2019 - Identification of rare-disease genes using blood t.pdf:/home/mertes/Zotero/storage/P2R5CLIU/Frésard et al. - 2019 - Identification of rare-disease genes using blood t.pdf:application/pdf;Snapshot:/home/mertes/Zotero/storage/IQDGH4EA/s41591-019-0457-8.html:text/html}
+}
 @article{1000GenomesProjectConsortium2015,
 abstract = {The 1000 Genomes Project set out to provide a comprehensive description of common human genetic variation by applying whole-genome sequencing to a diverse set of individuals from multiple populations. Here we report completion of the project, having reconstructed the genomes of 2,504 individuals from 26 populations using a combination of low-coverage whole-genome sequencing, deep exome sequencing, and dense microarray genotyping. We characterized a broad spectrum of genetic variation, in total over 88 million variants (84.7 million single nucleotide polymorphisms (SNPs), 3.6 million short insertions/deletions (indels), and 60,000 structural variants), all phased onto high-quality haplotypes. This resource includes {\textgreater}99{\%} of SNP variants with a frequency of {\textgreater}1{\%} for a variety of ancestries. We describe the distribution of genetic variation across the global sample, and discuss the implications for common disease studies.},
 author = {{1000 Genomes Project Consortium} and Auton, Adam and Brooks, Lisa D. and Durbin, Richard M. and Garrison, Erik P. and Kang, Hyun Min and Korbel, Jan O. and Marchini, Jonathan L. and McCarthy, Shane and McVean, Gil A. and Abecasis, Gon{\c{c}}alo R.},
